@@ -140,6 +140,8 @@ core-finder-button=Locate the hex core with this trade.
 clear-filters=Clear filters
 trade-contents=Trade Contents
 processing-finished=Processing finished.
+total-input-value=Total Input Value: __1__
+total-output-value=Total Output Value: __1__
 
 
 
